# ralphkit

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  example-pipe.yaml  example.yaml
scripts/: publish.sh
src/ralph/: cli.py  config.py  prompts.py  state.py
src/ralphkit/: __init__.py  cli.py  config.py  engine.py  hosts.py  jobs.py  local.py  prompts.py  remote.py  report.py  runner.py  state.py  tmux.py  ui.py
templates/tasks/: big-swing.md  build.md  fix.md  plan.md  research.md
tests/: test_cli.py  test_config.py  test_e2e.py  test_engine.py  test_hosts.py  test_jobs.py  test_local.py  test_prompts.py  test_remote.py  test_report.py  test_runner.py  test_state.py  test_task_templates.py  test_tmux.py
