[project]
name = "ralphkit"
dynamic = ["version"]
description = "Agent pipes and loops for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
ralph = "ralphkit.cli:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/ralphkit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ralphkit"]

[tool.ruff]
extend-exclude = ["**/_version.py"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
